@@ -88,6 +88,7 @@ function form_Configuration(&$oDB, $smarty, $module_name, $local_templates_dir)
         'dialer.allevents' => 'dialer_allevents',
         'dialer.overcommit' => 'dialer_overcommit',
         'dialer.qos' => 'dialer_qos',
+        'dialer.predictivo' => 'dialer_predictivo',
     );
     $valoresForm = array(
         'asterisk_asthost' => '127.0.0.1',
@@ -101,10 +102,12 @@ function form_Configuration(&$oDB, $smarty, $module_name, $local_templates_dir)
         'dialer_allevents' => 'off',
         'dialer_overcommit' => 'off',
         'dialer_qos' => '0.97',
+        'dialer_predictivo' => 'on',
     );
     foreach ($camposConocidos as $dbfield => $formfield) {
         if (isset($listaConf[$dbfield])) {
-            if ($dbfield == 'dialer.debug' || $dbfield == 'dialer.allevents' || $dbfield == 'dialer.overcommit')
+            if (in_array($dbfield, array('dialer.debug', 'dialer.allevents', 
+                'dialer.overcommit', 'dialer.predictivo')) )
             {
                 $valoresForm[$formfield] = $listaConf[$dbfield] ? 'on' : 'off';
             } else $valoresForm[$formfield] = $listaConf[$dbfield];
@@ -118,7 +121,8 @@ function form_Configuration(&$oDB, $smarty, $module_name, $local_templates_dir)
             $_POST['asterisk_astpass_2'] = '';
         }
         foreach ($camposConocidos as $dbfield => $formfield) if (isset($_POST[$formfield])) {
-            if ($dbfield == 'dialer.debug' || $dbfield == 'dialer.allevents' || $dbfield == 'dialer.overcommit')
+            if (in_array($dbfield, array('dialer.debug', 'dialer.allevents', 
+                'dialer.overcommit', 'dialer.predictivo')))
             {
                $valoresForm[$formfield] = ($_POST[$formfield] == 'on') ? 'on' : 'off';
             } else $valoresForm[$formfield] = $_POST[$formfield];
@@ -160,7 +164,8 @@ function form_Configuration(&$oDB, $smarty, $module_name, $local_templates_dir)
                 foreach ($camposConocidos as $dbfield => $formfield) {
                     if ($dbfield == 'asterisk.astpass' && $_POST[$formfield] == '') continue;
                     
-                    if ($dbfield == 'dialer.debug' || $dbfield == 'dialer.allevents' || $dbfield == 'dialer.overcommit') {
+                    if (in_array($dbfield, array('dialer.debug', 'dialer.allevents', 
+                            'dialer.overcommit', 'dialer.predictivo'))) {
                         $config[$dbfield] = ($_POST[$formfield] == 'on') ? 1 : 0;
                     } else {
                         $config[$dbfield] = $_POST[$formfield];
@@ -308,6 +313,14 @@ function createFieldForm()
             'VALIDATION_TYPE'           =>  'float',
             'INPUT_EXTRA_PARAM'         =>  '',
             'VALIDATION_EXTRA_PARAM'    =>  '^[[:digit:]]+$',
+        ),
+        'dialer_predictivo'  =>      array(
+            'LABEL'                     =>  _tr('Enable predictive dialer behavior'),
+            'REQUIRED'                  =>  'yes',
+            'INPUT_TYPE'                =>  'CHECKBOX',
+            'VALIDATION_TYPE'           =>  'text',
+            'INPUT_EXTRA_PARAM'         =>  '',
+            'VALIDATION_EXTRA_PARAM'    =>  '',
         ),
     );
 }
